--- a/index.html
+++ b/index.html
@@ -1,101 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <!--
-      This is the page head - it contains info the browser uses to display the page
-      You won't see what's in the head in the page
-      Scroll down to the body element for the page content
-    -->
-
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://glitch.com/favicon.ico" />
-
-    <!-- 
-      This is an HTML comment
-      You can write text in a comment and the content won't be visible in the page
-    -->
-
-    <title>Hello World!</title>
-
-    <!-- Meta tags for SEO and social sharing -->
-    <link rel="canonical" href="https://glitch-hello-website.glitch.me/" />
-    <meta
-      name="description"
-      content="A simple website, built with Glitch. Remix it to get your own."
+    <title>Bundle APP Store</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.css"
     />
-    <meta name="robots" content="index,follow" />
-    <meta property="og:title" content="Hello World!" />
-    <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://glitch-hello-website.glitch.me/" />
-    <meta
-      property="og:description"
-      content="A simple website, built with Glitch. Remix it to get your own."
-    />
-    <meta
-      property="og:image"
-      content="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2Fhello-website-social.png?v=1616712748147"
-    />
-    <meta name="twitter:card" content="summary" />
-
-    <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
-
-    <!-- Import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.4/dist/semantic.min.js"></script>
   </head>
   <body>
-    <!--
-      This is the body of the page
-      Look at the elements and see how they appear in the rendered page on the right
-      Each element is defined using tags, with < and > indicating where each one opens and closes
-      There are elements for sections of the page, images, text, and more
-      The elements include attributes referenced in the CSS for the page style
-    -->
-
-    <!-- The wrapper and content divs set margins and positioning -->
-    <div class="wrapper">
-      <div class="content" role="main">
-        <!-- This is the start of content for our page -->
-        <h1 class="title">Hello World!</h1>
-
-        <img
-          src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
-          class="illustration"
-          alt="Editor illustration"
-          title="Click the image!"
-        />
-        <!-- Instructions on using this project -->
-        <div class="instructions">
-          <h2>
-            Using this project
-          </h2>
-          <p>
-            This is the Glitch <strong>Hello Website</strong> project. You can
-            use it to build your own site. Check out README.md in the editor for
-            more info and next steps you can take!
-          </p>
-          <!-- ADD BUTTON HERE -->
-          
-          <!-- Once you've added the button from the readme, click it in the page -->
-          <!-- Check out the function in script.js to see how it works -->
+    <img src="https://cdn.glitch.global/0cf26778-0ac4-4def-8a4c-f0f36a50325d/banner.png?v=1657105921526" class="ui centered massive image" />
+    <section class="ui container">
+      <header class="ui stacked segment">
+        <h1>Welcome to the App Bundle Store</h1>
+      </header>
+      <div class="ui grid">
+        <div class="ui twelve wide column">
+          <nav>
+            <ul class="ui three item tabular menu">
+              <li id="home" class="ui item"><a href="index.html">Home</a></li>
+              <li id="apps" class="ui item"><a href="apps.html">Apps</a></li>
+              <li id="directions" class="ui item">
+                <a href="directions.html">Directions</a>
+              </li>
+            </ul>
+          </nav>
+          <script>
+            document.querySelector("#home").classList.add("active");
+          </script>
+          <main>
+            <article class="ui basic segment">
+              <p>
+                This store brings you <em> great app bundles </em> week after
+                week. We select the best power user apps from a broad range of
+                suppliers and combine them into great deals. These are the
+                highest quality apps from the best publishers, at great prices.
+              </p>
+              <p>
+                Whether you are interested in gaming or graphics design,
+                software development or media production - we have the bundle
+                for you. Each <a href="apps.html">app bundle</a> is designed to
+                compliment the others, delivering you an exciting take on a
+                scene.
+              </p>
+              <p class="ui inverted teal segment">
+                Our guarantee: at the store, we're committed to providing you,
+                with an exceptional quality and reliability. Every application
+                is checked in detail for stability, usability and
+                inter-interoperability. If you are unhappy with any individual
+                app in a bundle we will refund you the full amount for the
+                complete suite, no questions asked.
+              </p>
+              <h2>Favourites</h2>
+              <p>These are some of our favourites</p>
+              <div class="ui circular inverted blue segment">
+                <ul class="ui list">
+                  <div class="item">Hype by Tumult</div>
+                  <div class="item">Webstorm by Idea</div>
+                  <div class="item">Sublime, by sublimetext.com</div>
+                  <div class="item">Desktop Utility by Sweet Productions</div>
+                </ul>
+              </div>
+              <p>
+                We will be reviewing these favourites in the coming weeks, so
+                please check in again to find out why these are our favourite
+                apps.
+              </p>
+              <p>
+                Why not come in and walk aroud the store? Directions are
+                included below.
+              </p>
+            </article>
+          </main>
+        </div>
+        <div class="ui four wide column">
+          <aside>
+            <div class="ui card">
+              <div class="image">
+                <img src="https://cdn.glitch.global/0cf26778-0ac4-4def-8a4c-f0f36a50325d/business.png?v=1657105921427" />
+              </div>
+              <div class="content">
+                <a class="header">Business Bundle</a>
+                <div class="meta">
+                  <span class="date">Weekly Deals</span>
+                </div>
+                <div class="description">
+                  This is our most exciting business combination - for just
+                  €29.99!
+                </div>
+              </div>
+            </div>
+            <div class="ui card">
+              <div class="image">
+                <img src="https://cdn.glitch.global/0cf26778-0ac4-4def-8a4c-f0f36a50325d/insanity.jpg?v=1657105921290" />
+              </div>
+              <div class="content">
+                <a class="header">Insanity</a>
+                <div class="meta">
+                  <span class="date">Special Offer</span>
+                </div>
+                <div class="description">
+                  Our premimum creating suite - f for €199.94. So you can save
+                  around 84%.
+                </div>
+              </div>
+            </div>
+          </aside>
         </div>
       </div>
-    </div>
-    <!-- The footer holds our remix button — you can use it for structure or cut it out ✂ -->
-    <footer class="footer">
-      <div class="links"></div>
-      <a
-        class="btn--remix"
-        target="_top"
-        href="https://glitch.com/edit/#!/remix/glitch-hello-website"
-      >
-        <img
-          src="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2FLogo_Color.svg?v=1618199565140"
-          alt=""
-        />
-        Remix on Glitch
-      </a>
-    </footer>
+      <footer class="ui stacked segment">
+        <p>
+          Contact us at : bundle@store.com, or visit us:
+          <a href="directions.html"> directions </a>
+        </p>
+      </footer>
+    </section>
   </body>
 </html>
