📺😋 Checkpoint ./apps.html:46539530/555 ./index.html:46539530/509

--- a/apps.html
+++ b/apps.html
@@ -68,7 +68,7 @@
           <aside>
             <div class="ui card">
               <div class="image">
-                <img src="images/business.png">
+                <img src="https://cdn.glitch.global/0cf26778-0ac4-4def-8a4c-f0f36a50325d/business.png?v=1657105921427">
               </div>
               <div class="content">
                 <a class="header">Business Bundle</a>
@@ -82,7 +82,7 @@
             </div>
             <div class="ui card">
               <div class="image">
-                <img src="images/insanity.jpg">
+                <img src="https://cdn.glitch.global/0cf26778-0ac4-4def-8a4c-f0f36a50325d/insanity.jpg?v=1657105921290">
               </div>
               <div class="content">
                 <a class="header">Insanity</a>
@@ -99,6 +99,7 @@
       </div>
       <footer class="ui stacked segment">
         <p> Contact us at : bundle@store.com, or visit us: <a href="directions.html"> directions </a></p>
+        
       </footer>
     </section>
   </body>
