--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
         <p>
           Contact us at : bundle@store.com, or visit us:
           <a href="directions.html"> directions </a>
+          
         </p>
+         <a class="ui basic blue button" href="https://glitch.com/edit/#!/remix/bundle-store">
+           <i class="fork icon"></i> 
+          Remix on Glitch
+        </a>
       </footer>
     </section>
   </body>
